2020-05-18  Andy Estes  <aestes@apple.com>

        http/tests/ssl/applepay/ApplePayInstallmentConfiguration.https.html fails in public SDK builds
        https://bugs.webkit.org/show_bug.cgi?id=212000
        <rdar://problem/63323082>

        Reviewed by Youenn Fablet.

        * platform/mac-wk2/TestExpectations:

2020-05-18  Myles C. Maxfield  <mmaxfield@apple.com>

        [WebGPU] Validation for GPUDevice.createTexture()
        https://bugs.webkit.org/show_bug.cgi?id=211882
        <rdar://problem/63215999>

        Reviewed by Dean Jackson.

        * webgpu/blit-commands-texture-to-texture.html: Updated.
          Rewrote part of the test to avoid hitting https://bugs.webkit.org/show_bug.cgi?id=212013
        * webgpu/texture-creation-expected.txt: Added.
        * webgpu/texture-creation.html: Added.

2020-05-18  Simon Fraser  <simon.fraser@apple.com>

        Content disappears on CSS parallax example
        https://bugs.webkit.org/show_bug.cgi?id=212045
        <rdar://problem/63194217>

        Reviewed by Tim Horton.

        * compositing/tiling/perspective-on-scroller-tile-coverage-expected.txt: Added.
        * compositing/tiling/perspective-on-scroller-tile-coverage.html: Added.

2020-05-18  Pinki Gyanchandani  <pgyanchandani@apple.com>

        Null Ptr Deref @ WebCore::CSSValue::classType
        https://bugs.webkit.org/show_bug.cgi?id=212036

        Reviewed by Geoffrey Garen.

        Added a regression test.

        * editing/execCommand/null_calc_primitive_value_for_css_property-expected.txt: Added.
        * editing/execCommand/null_calc_primitive_value_for_css_property.html: Added.

2020-05-15  Lauro Moura  <lmoura@igalia.com>

        [GTK][WPE] Rebaseline security/block-test-no-port.html

        Since upstream libsoup commit e337a6f794 it uses soup-http-error-quark
        GQuark as string for the error domain.

        The error code 4 already maps to SOUP_STATUS_CANT_CONNECT which is the